test/types/string/bradc/string2ints/string2negval.chpl
var s = "-1";

var x8 = s:int(8);
writeln("x8 is: ", x8);

var x16 = s:int(16);
writeln("x16 is: ", x16);

var x32 = s:int(32);
writeln("x32 is: ", x32);

var x64 = s:int(64);
writeln("x64 is: ", x64);

var u8 = s:uint(8);
writeln("u8 is: ", u8);
